--- a/protected/index.html
+++ b/protected/index.html
@@ -124,15 +124,11 @@
             font-size: 16px;
             transition: background-color 0.3s ease;
         }
-
-        .disconnect-btn:hover {
-            background-color: #c9302c; /* Darker red on hover */
-        }
     </style>
 </head>
 <body>
     <!-- Disconnect Button -->
-    <button class="disconnect-btn" onclick="disconnect()">Disconnect</button>
+    <!-- <button class="disconnect-btn" onclick="disconnect()">Disconnect</button> -->
 
     <div class="container">
         <h1>MCNR Applications</h1>
@@ -150,7 +146,7 @@
         </div>
     </div>
 
-    <script>
+    <!-- <script>
         // Function to handle disconnect
         function disconnect() {
             // Clear session storage (or local storage) to log the user out
@@ -159,6 +155,6 @@
             // Redirect to the root (main login page)
             window.location.href = "../index.html";
         }
-    </script>
+    </script> -->
 </body>
 </html>
